chore:fix some bugs and refactored test cases
