# server/docs/swagger.json
@@ -8,16 +8,13 @@
       "name": "ISC"
     }
   },
-  "host": "automart-db.herokuapp.com",
-  "basePath": "/api/v1",
-  "schemes": [
-    "https"
-  ],
+  "host": "localhost:3000",
+  "basePath": "/api/v2",
   "paths": {
     "/auth/signup": {
       "post": {
         "tags": [
-          "Users"
+          "Auth"
         ],
         "summary": "Creates user",
         "description": "Adds a new user to the database",
@@ -87,6 +84,12 @@
               "$ref": "#/definitions/ClientError"
             }
           },
+          "409": {
+            "description": "User with the email exists in the database",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
+            }
+          },
           "500": {
             "description": "A server error prevented the user from being created",
             "schema": {
@@ -99,7 +102,7 @@
     "/auth/signin": {
       "post": {
         "tags": [
-          "Users"
+          "Auth"
         ],
         "summary": "Login a user",
         "description": "Validates a user against list of users in the database. Genearates a new token for user if validation is successful",
@@ -156,13 +159,13 @@
         }
       }
     },
-    "/users/{email}/resetPassord": {
+    "/users/{email}/resetPassword": {
       "post": {
         "tags": [
           "Users"
         ],
         "summary": "Resets user's password",
-        "description": "Generates a new password and sends it to user's email if the body is empty. Updates user's password if old password and new password is submitted through request body.",
+        "description": "<li>Generates a new password and sends it to user's email if the body is empty.</li><li>Updates user's password if old and new passwords are submitted through request body. User must be logged in to update his password</li><li>Resetting or updating the password invalidates a recently generated token for the user even if it hasn't expired",
         "security": [
           {
             "Token": []
@@ -174,12 +177,12 @@
             "in": "path",
             "required": true,
             "description": "The email of the user's password to be updated",
-            "type": "integer"
+            "type": "string"
           },
           {
             "name": "password",
             "in": "body",
-            "description": "The old and new password",
+            "description": "The old and new passwords",
             "schema": {
               "properties": {
                 "password": {
@@ -203,6 +206,12 @@
             "description": "Password was updated successfully"
           },
           "401": {
+            "description": "The password is incorrect",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
+            }
+          },
+          "404": {
             "description": "The email is not associated with any user",
             "schema": {
               "$ref": "#/definitions/ClientError"
@@ -222,7 +231,7 @@
         "tags": [
           "Cars"
         ],
-        "summary": "Creates car AD",
+        "summary": "Post a car AD",
         "description": "Creates a new car AD and saves it in the database",
         "security": [
           {
@@ -232,6 +241,7 @@
         "parameters": [
           {
             "name": "car",
+            "required": true,
             "in": "body",
             "description": "The body of the car AD to create",
             "schema": {
@@ -314,8 +324,8 @@
         "tags": [
           "Cars"
         ],
-        "summary": "Updates the price car",
-        "description": "Updates the price of a specific posted AD",
+        "summary": "Updates the price of a posted AD",
+        "description": "Updates the price of a specific posted AD. The price of an AD can only be updated by the owner of the AD.",
         "security": [
           {
             "Token": []
@@ -326,7 +336,7 @@
             "name": "carId",
             "in": "path",
             "required": true,
-            "description": "The car's id",
+            "description": "The id of the posted AD to be updated",
             "type": "integer"
           },
           {
@@ -378,8 +388,8 @@
         "tags": [
           "Cars"
         ],
-        "summary": "Updates car",
-        "description": "Updates the status of a posted car AD",
+        "summary": "Updates the status of a posted AD",
+        "description": "Updates the status of a posted car AD. The status of an AD can only be updated by the owner of the AD. Status can only be updated to 'sold' from 'available'",
         "security": [
           {
             "Token": []
@@ -390,18 +400,23 @@
             "name": "carId",
             "in": "path",
             "required": true,
-            "description": "The car's id",
+            "description": "The id of the posted AD",
             "type": "integer"
           },
           {
             "name": "status",
             "in": "body",
             "required": true,
+            "description": "<li>The new status to set for the posted AD. Must be 'sold' else an error will be thrown</li> <li>The id of the order that was accepted by the seller</li>",
             "schema": {
               "properties": {
                 "status": {
                   "type": "string",
                   "example": "sold"
+                },
+                "orderId": {
+                  "type": "integer",
+                  "example": 1
                 }
               }
             }
@@ -440,19 +455,14 @@
         "tags": [
           "Cars"
         ],
-        "summary": "Gets a car",
-        "description": "Gets a specific car by its id",
-        "security": [
-          {
-            "Token": []
-          }
-        ],
+        "summary": "Gets a specific posted ad",
+        "description": "Gets a specific posted AD  by its id",
         "parameters": [
           {
             "name": "carId",
             "in": "path",
             "required": true,
-            "description": "The id of the car to get",
+            "description": "The id of the posted AD to get",
             "type": "integer"
           }
         ],
@@ -483,32 +493,40 @@
         "tags": [
           "Cars"
         ],
-        "summary": "Gets all unsold cars",
-        "description": "Returns a list of all available cars. Returns a list of cars within a price range if minPrice and maxPrice query parameters are added.",
-        "security": [
-          {
-            "Token": []
-          }
-        ],
+        "summary": "Gets all unsold posted AD",
+        "description": "<li>Returns a list of all available cars if <b>status</b> query parameter is provided</li> <li>Returns a list of available cars within a specific price range if <b>status</b>, <b>minPrice</b> and <b>maxPrice</b> query parameters are provided.</li> <li>Returns a list of available cars with prices that are equal to or greater than <b>minPrice</b> if <b>minPrice</b> and <b>status</b> query parameters are provided.</li> <li>Returns a list of available cars with prices that are equal to or lesser than <b>maxPrice</b> if <b>status</b> and <b>maxPrice</b> query parameters are provided.</li> <li>Returns a list of available cars within a specific price range and has a particular state if <b>status</b>, <b>minPrice</b>, <b>maxPrice</b> and <b>state</b> query parameters are provided.</li> <li>Returns a list of available cars that are either new or used and are lesser that or equal to <b>maxPrice</b> if <b>status</b>, <b>maxPrice</b>, and <b>state</b> query parameters are provided.</li> <li>Returns a list of available cars that are either new or used and are greater that or equal to <b>minPrice</b> if <b>status</b>, <b>minPrice</b>, and <b>state</b> query parameters are provided.</li> <li>Returns a list of available cars that are either new or used if <b>status</b> and <b>state</b> query parameters are provided.</li> <li>Returns a list of available cars that were made by the same manufacturer if <b>status</b> and <b>manufacturer</b> query parameters are provided.</li>",
         "parameters": [
           {
             "name": "status",
             "in": "query",
             "required": true,
             "description": "The status of the cars to fetch",
-            "type": "string"
+            "type": "string",
+            "default": "available"
           },
           {
             "name": "minPrice",
             "in": "query",
-            "description": "The minimum price",
+            "description": "The minimum price of the cars to fetch",
             "type": "integer"
           },
           {
             "name": "maxPrice",
             "in": "query",
-            "description": "The maximum price",
+            "description": "The maximum price of the cars to fetch",
             "type": "integer"
+          },
+          {
+            "name": "state",
+            "in": "query",
+            "description": "The state of the cars to fetch. Must be 'sold' or 'new'",
+            "type": "string"
+          },
+          {
+            "name": "manufacturer",
+            "in": "query",
+            "description": "The make (manufacturer) of the cars to fetch",
+            "type": "string"
           }
         ],
         "responses": {
@@ -516,6 +534,12 @@
             "description": "Cars were retrieved successfully",
             "schema": {
               "$ref": "#/definitions/CarsResponse"
+            }
+          },
+          "400": {
+            "description": "A client error prevented the cars from being retrieved",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
             }
           },
           "500": {
@@ -530,10 +554,10 @@
     "/admin/cars/{carId}": {
       "delete": {
         "tags": [
-          "Cars"
+          "Admin"
         ],
         "summary": "Deletes a car",
-        "description": "Deletes a specific car from the memory",
+        "description": "Deletes a specific car from the database",
         "security": [
           {
             "Token": []
@@ -544,24 +568,26 @@
             "name": "carId",
             "in": "path",
             "required": true,
-            "description": "The id of the car to delete",
+            "description": "The id of the car to be deleted",
             "type": "integer"
           }
         ],
         "responses": {
-          "200": {
+          "204": {
             "description": "Car was successfully deleted",
             "schema": {
               "properties": {
                 "status": {
                   "type": "integer",
-                  "example": 200
-                },
-                "data": {
-                  "type": "string",
-                  "example": "Car was deleted successfully"
+                  "example": 204
                 }
               }
+            }
+          },
+          "404": {
+            "description": "Car with id: carId does not exist",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
             }
           },
           "500": {
@@ -576,7 +602,7 @@
     "/admin/cars": {
       "get": {
         "tags": [
-          "Cars"
+          "Admin"
         ],
         "summary": "Gets all cars",
         "description": "Returns a list of all cars irrespective of status",
@@ -607,7 +633,7 @@
           "Orders"
         ],
         "summary": "Create a purchase order",
-        "description": "Creates a purchase order and saves it in memory",
+        "description": "Creates a purchase order and saves it in the database",
         "security": [
           {
             "Token": []
@@ -699,7 +725,7 @@
             }
           },
           "500": {
-            "description": "A server error prevented the car AD from being created",
+            "description": "A server error prevented the order from being created",
             "schema": {
               "$ref": "#/definitions/ServerError"
             }
@@ -713,7 +739,7 @@
           "Orders"
         ],
         "summary": "Updates a purchase order",
-        "description": "Update the price of a purchase order. A user can only update the price of his/her purchase order while the order’s status still reads pending",
+        "description": "Updates the amount of a purchase order. A user can only update the amount of his/her purchase order while the order’s status still reads pending",
         "security": [
           {
             "Token": []
@@ -728,13 +754,13 @@
             "type": "integer"
           },
           {
-            "name": "amount",
+            "name": "price",
             "in": "body",
             "required": true,
             "description": "The new amount to set for the order",
             "schema": {
               "properties": {
-                "amount": {
+                "price": {
                   "type": "number",
                   "format": "double",
                   "example": 1405000.87
@@ -791,6 +817,99 @@
                       "type": "integer",
                       "format": "double",
                       "example": 2000000.54
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "One or more fields is/are missing",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
+            }
+          },
+          "404": {
+            "description": "Car with id: 1 does not exist",
+            "schema": {
+              "$ref": "#/definitions/ClientError"
+            }
+          },
+          "500": {
+            "description": "A server error prevented the order from being edited",
+            "schema": {
+              "$ref": "#/definitions/ServerError"
+            }
+          }
+        }
+      }
+    },
+    "/flags": {
+      "post": {
+        "tags": [
+          "Flags"
+        ],
+        "summary": "Flag a posted AD",
+        "description": "Create a flag for a posted AD",
+        "parameters": [
+          {
+            "name": "flag",
+            "in": "body",
+            "description": "The body of the flag to create",
+            "schema": {
+              "required": [
+                "carId",
+                "reason"
+              ],
+              "properties": {
+                "carId": {
+                  "type": "integer",
+                  "example": 1
+                },
+                "reason": {
+                  "type": "string",
+                  "example": "Inflated price"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "The price of the car is much more than what it goes for in the open market"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Flag was created successfully",
+            "schema": {
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 200
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "carId": {
+                      "type": "integer",
+                      "example": 1
+                    },
+                    "reason": {
+                      "type": "string",
+                      "example": "Inflated price"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "The price of the car is much more than what it goes for in the open market"
+                    },
+                    "createdOn": {
+                      "type": "string",
+                      "format": "date-time",
+                      "example": "10/06/2019 8:30am"
                     }
                   }
                 }
@@ -982,7 +1101,7 @@
                 "type": "integer",
                 "example": 1
               },
-              "email": {
+              "owner": {
                 "type": "string",
                 "example": "johndoe@gmail.com"
               },
@@ -1034,4 +1153,4 @@
       }
     }
   }
-} 
+}
